[package]
name = "homework"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.91"
resolver = "3"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
const_format = "0.2"
rama = { git = "https://github.com/plabayo/rama.git", branch = "main", features = [
    "tcp",
    "http-full",
    "boring",
    "haproxy",
    "opentelemetry",
] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5"

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1"

[build-dependencies]
vergen-gitcl = { version = "1", features = ["build", "cargo"] }

[lints.rust]
unused_imports = "warn"
unused = { level = "allow", priority = -1 }
elided_lifetimes_in_paths = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[lints.clippy]
all = { level = "warn", priority = -1 }
todo = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
mem_forget = "warn"
unused_self = "warn"
filter_map_next = "warn"
needless_continue = "warn"
needless_borrow = "warn"
match_wildcard_for_single_variants = "warn"
if_let_mutex = "warn"
await_holding_lock = "warn"
imprecise_flops = "warn"
suboptimal_flops = "warn"
lossy_float_literal = "warn"
rest_pat_in_fully_bound_structs = "warn"
fn_params_excessive_bools = "warn"
exit = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
macro_use_imports = "warn"
option_option = "warn"
verbose_file_reads = "warn"
unnested_or_patterns = "warn"
str_to_string = "warn"
type_complexity = "allow"
